# bike_rental_bot_master2

./: .gitignore  LICENSE  README.md  add_admin.py  config.py  pyproject.toml  requirements.txt  start_backend_service.py  start_client_bot.py
backend/: __init__.py
bike_rental_bot_master/: add_admin.py  config.py  pyproject.toml  start_business_bot.py
bike_rental_bot_master/backend/: __init__.py
bike_rental_bot_master/backend/admin/: resources.py  routes.py
bike_rental_bot_master/backend/templates/admin/: base.html  dashboard.html  layout.html
bike_rental_bot_master/business_bot/: __init__.py  constants.py
bike_rental_bot_master/business_bot/handlers/: __init__.py  bike.py  commands.py  language.py  main_menu.py  request.py
bike_rental_bot_master/business_bot/helpers/: __init__.py  language.py
bike_rental_bot_master/business_bot/keyboards/: base.py  bike.py  language.py
bike_rental_bot_master/business_bot/middleware/: option.py
bike_rental_bot_master/business_bot/states/: __init__.py  garage.py  language.py
bike_rental_bot_master/client_bot/handlers/: __init__.py  commands.py  language.py  request.py
bike_rental_bot_master/client_bot/helpers/: __init__.py
bike_rental_bot_master/client_bot/keyboards/: __init__.py  base.py  bikes.py  main_menu.py  request.py
bike_rental_bot_master/client_bot/middleware/: reply.py
bike_rental_bot_master/client_bot/states/: __init__.py  request.py
bike_rental_bot_master/database/: __init__.py
bike_rental_bot_master/database/models/: bike.py  reply.py  request.py  user.py
business_bot/: constants.py
(+70 files in other folders)
