[tool.poetry]
name = "bike-rental-bot-master2"
version = "0.1.0"
description = ""
authors = ["user <bav-574@mail.ru>"]
readme = "README.md"
packages = [{include = "bike_rental_bot_master2"}]

[tool.poetry.dependencies]
python = "^3.10"
tortoise = "^0.1.1"
requests = "^2.28.2"
loguru = "^0.7.0"
aiogram = "^2.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
